@@ -1,5 +1,17 @@
 2011-10-12  Yury Semikhatsky  <yurys@chromium.org>
 
+        [Chromium] Web Inspector:  add test for pause in shared worker initialization
+        https://bugs.webkit.org/show_bug.cgi?id=69915
+
+        Add WebKit part of interactive ui test for pause in worker initialization.
+
+        Reviewed by Pavel Feldman.
+
+        * src/js/Tests.js:
+        (.TestSuite.prototype.testPauseInSharedWorkerInitialization):
+
+2011-10-12  Yury Semikhatsky  <yurys@chromium.org>
+
         [Chromium] Web Inspector: repair interactive tests for debugger pause
         https://bugs.webkit.org/show_bug.cgi?id=69912
 
